# vcf2msip

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: arg_and_help.rs  error_flg.rs  file_fns.rs  ini_io.rs  main.rs  progress_bar.rs  vcf_parser.rs  xml_perser.rs
testfiles/: test.ini  test.vcf  test.xml
