[package]
name = "vcf2microsipxml"
version = "0.1.0"
authors = ["nakami <marm.nakamura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex  = "1"
kanaria = "0.2.0"
# widestring = "0.4.3"
file-utils = "0.1.5"

[profile.release]
opt-level  =  "s"
lto = true
codegen-units = 1
panic = 'abort'
