[package]
name = "vcf2msip"
version = "0.1.0"
authors = ["marm.nakamura"]
edition = "2018"
description = "Google contacts (.vcf:iOS) to MicroSIP contacts converter."
license = "MIT/Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex  = "1"
kanaria = "0.2.0"
file-utils = "0.1.5"

[profile.release]
opt-level  =  "s"
lto = true
codegen-units = 1
panic = 'abort'
