[package]
name = "vcf2msip"
version = "0.2.0"
authors = ["marm.nakamura"]
edition = "2021"
description = "Google contacts (.vcf:iOS) to MicroSIP or other csv contacts converter."
license = "MIT/Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex  = "1"
kanaria = "0.2.0"
file-utils = "0.1.5"
encoding_rs = "0.8.35"

[profile.release]
opt-level  =  "s"
lto = true
codegen-units = 1
panic = 'abort'
